src/objects/AcctSeed__Billing_Rates__c.object
<CustomObject>
    <description>Used to document an employee billing rate and/or expense markup. This is typically defined on a project task basis and used in the create billing from time card and expense report processes.</description>
    <fields>
        <fullName>AcctSeed__Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Per unit amount. Currency field.</inlineHelpText>
        <label>Labor Billing Rate</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Employee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Lookup to Salesforce User.</inlineHelpText>
        <label>Employee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Billing_Rates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Expense_Markup__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>The percentage to markup on an expense line which is billed for the given Project, Project Task, and Employee.</inlineHelpText>
        <label>Expense Markup</label>
        <precision>8</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Overtime_Labor_Billing_Rate__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>The billing rate that is used if the overtime field is checked on the time card line.</inlineHelpText>
        <label>Overtime Labor Billing Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Project_Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Work break down structure for projects, such as: Phases, Deliverables or Roles.</inlineHelpText>
        <label>Project Task</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AcctSeed__Project_Task__c.AcctSeed__Project__c</field>
                <operation>equals</operation>
                <valueField>$Source.AcctSeed__Project__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Project_Task__c</referenceTo>
        <relationshipName>Billing_Rates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Related Project or Job for allocation of Revenue.</inlineHelpText>
        <label>Project</label>
        <referenceTo>AcctSeed__Project__c</referenceTo>
        <relationshipName>Billing_Rates</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Billing Rate</label>
    <listViews>
        <fullName>AcctSeed__All</fullName>
        <columns>NAME</columns>
        <columns>AcctSeed__Employee__c</columns>
        <columns>AcctSeed__Project__c</columns>
        <columns>AcctSeed__Project_Task__c</columns>
        <columns>AcctSeed__Amount__c</columns>
        <columns>AcctSeed__Overtime_Labor_Billing_Rate__c</columns>
        <columns>AcctSeed__Expense_Markup__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>AcctSeed__Employee_Default</fullName>
        <columns>NAME</columns>
        <columns>AcctSeed__Employee__c</columns>
        <columns>AcctSeed__Project__c</columns>
        <columns>AcctSeed__Project_Task__c</columns>
        <columns>AcctSeed__Amount__c</columns>
        <columns>AcctSeed__Overtime_Labor_Billing_Rate__c</columns>
        <columns>AcctSeed__Expense_Markup__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AcctSeed__Project__c</field>
            <operation>equals</operation>
        </filters>
        <label>Employee Default</label>
    </listViews>
    <listViews>
        <fullName>AcctSeed__Project_Default</fullName>
        <columns>NAME</columns>
        <columns>AcctSeed__Employee__c</columns>
        <columns>AcctSeed__Project__c</columns>
        <columns>AcctSeed__Project_Task__c</columns>
        <columns>AcctSeed__Amount__c</columns>
        <columns>AcctSeed__Overtime_Labor_Billing_Rate__c</columns>
        <columns>AcctSeed__Expense_Markup__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AcctSeed__Project__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>AcctSeed__Project_Task__c</field>
            <operation>equals</operation>
        </filters>
        <label>Project Default</label>
    </listViews>
    <listViews>
        <fullName>AcctSeed__Project_Task_Default</fullName>
        <columns>NAME</columns>
        <columns>AcctSeed__Employee__c</columns>
        <columns>AcctSeed__Project__c</columns>
        <columns>AcctSeed__Project_Task__c</columns>
        <columns>AcctSeed__Amount__c</columns>
        <columns>AcctSeed__Overtime_Labor_Billing_Rate__c</columns>
        <columns>AcctSeed__Expense_Markup__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AcctSeed__Project_Task__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Project Task Default</label>
    </listViews>
    <nameField>
        <displayFormat>BRT-{00000}</displayFormat>
        <label>Billing Rate Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Billing Rates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>